force-app/main/default/objects/Waitlist__c/Waitlist__c.object-meta.xml
<CustomObject>
    <label>Waitlist</label>
    <nameField>
        <displayFormat>Housing Waitlist-{000000}</displayFormat>
        <label>Housing Waitlist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Waitlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>