force-app/main/default/objects/Waitlist__c/fields/Balcony_Needed__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony Needed</label>
    <type>Checkbox</type>
</CustomField>