force-app/main/default/objects/Waitlist__c/fields/Balcony_Selection__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Selection__c</fullName>
    <label>Balcony Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>