force-app/main/default/objects/Waitlist__c/fields/Building_Type__c.field-meta.xml
<CustomField>
    <fullName>Building_Type__c</fullName>
    <label>Building Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior only</fullName>
            </value>
            <value>
                <fullName>All ages</fullName>
            </value>
            <value>
                <fullName>All ages co-op</fullName>
            </value>
            <value>
                <fullName>All ages non-profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>