force-app/main/default/objects/Waitlist__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BRAMPTON</fullName>
            </value>
            <value>
                <fullName>CALEDON</fullName>
            </value>
            <value>
                <fullName>MISSISSAUGA</fullName>
            </value>
            <value>
                <fullName>VANCOUVER</fullName>
            </value>
            <value>
                <fullName>VICTORIA</fullName>
            </value>
            <value>
                <fullName>BANFF</fullName>
            </value>
            <value>
                <fullName>KELOWNA</fullName>
            </value>
            <value>
                <fullName>BURNABY</fullName>
            </value>
            <value>
                <fullName>SURREY</fullName>
            </value>
            <value>
                <fullName>ABBOTSFORD</fullName>
            </value>
            <value>
                <fullName>LANGLEY</fullName>
            </value>
            <value>
                <fullName>BRYAN</fullName>
            </value>
            <value>
                <fullName>HOUSTON</fullName>
            </value>
            <value>
                <fullName>ROSENBERG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>