force-app/main/default/objects/Waitlist__c/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <label>Family Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>