force-app/main/default/objects/Waitlist__c/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate File</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>