force-app/main/default/objects/Waitlist__c/fields/Medical_Unit_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Medical_Unit_Restriction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Unit Restriction</label>
    <type>Checkbox</type>
</CustomField>