force-app/main/default/objects/Waitlist__c/fields/Modified_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Modified_Unit_Type__c</fullName>
    <label>Modified Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wheelchair accessible with roll-in shower</fullName>
            </value>
            <value>
                <fullName>Wheelchair accessible without roll-in shower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>