force-app/main/default/objects/Waitlist__c/fields/No_Of_Bedrooms_Unit_Size__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Bedrooms_Unit_Size__c</fullName>
    <label>No. Of Bedrooms (Unit Size)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>