force-app/main/default/objects/Waitlist__c/fields/Notice_to_Vacate_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Vacate_Requirements__c</fullName>
    <label>Notice to Vacate Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 days</fullName>
            </value>
            <value>
                <fullName>60 days</fullName>
            </value>
            <value>
                <fullName>None required</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>