force-app/main/default/objects/Waitlist__c/fields/On_Hold_Datetime__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Datetime__c</fullName>
    <label>On Hold Datetime</label>
    <type>DateTime</type>
</CustomField>