force-app/main/default/objects/Waitlist__c/fields/Other_Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Inactive_Reason__c</fullName>
    <label>Other Inactive Reason</label>
    <type>TextArea</type>
</CustomField>