force-app/main/default/objects/Waitlist__c/fields/Other_Reactivate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Reactivate_Reason__c</fullName>
    <label>Other Reactivate Reason</label>
    <type>TextArea</type>
</CustomField>