force-app/main/default/objects/Waitlist__c/fields/Priority_Type__c.field-meta.xml
<CustomField>
    <fullName>Priority_Type__c</fullName>
    <label>Priority Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 - VOFV</fullName>
            </value>
            <value>
                <fullName>01 - VOHT</fullName>
            </value>
            <value>
                <fullName>02 - Overhoused</fullName>
            </value>
            <value>
                <fullName>03 - Medical</fullName>
            </value>
            <value>
                <fullName>04 - Insitu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>