force-app/main/default/objects/Waitlist__c/fields/Reactivate_Date__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Date__c</fullName>
    <label>Reactivate Date</label>
    <type>Date</type>
</CustomField>