force-app/main/default/objects/Waitlist__c/fields/Reactivate_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Reason__c</fullName>
    <label>Reactivate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Manager appeal approved</fullName>
            </value>
            <value>
                <fullName>Service Manager appeal conditional approval</fullName>
            </value>
            <value>
                <fullName>Contact within 1 year of no response to mail-out</fullName>
            </value>
            <value>
                <fullName>Other, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>