force-app/main/default/objects/Waitlist__c/fields/Special_circumstances_details__c.field-meta.xml
<CustomField>
    <fullName>Special_circumstances_details__c</fullName>
    <label>Special circumstances details</label>
    <type>TextArea</type>
</CustomField>