force-app/main/default/objects/Waitlist__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarded</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>Unit Ready</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>On offer</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>