force-app/main/default/objects/Waitlist__c/fields/Unit_Ready_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Ready_Date__c</fullName>
    <label>Unit Ready Date</label>
    <type>Date</type>
</CustomField>