force-app/main/default/objects/Waitlist__c/fields/Unit_size_match_family_size_eligibility__c.field-meta.xml
<CustomField>
    <fullName>Unit_size_match_family_size_eligibility__c</fullName>
    <label>Unit size match family size eligibility?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>