force-app/main/default/objects/Waitlist__c/fields/Unit_size_mis_match_reason__c.field-meta.xml
<CustomField>
    <fullName>Unit_size_mis_match_reason__c</fullName>
    <label>Unit size mis-match reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed to one unit size smaller</fullName>
            </value>
            <value>
                <fullName>Agreed to bachelor instead of 1 bedroom</fullName>
            </value>
            <value>
                <fullName>Request extra bedroom for medical reason</fullName>
            </value>
            <value>
                <fullName>Child custody arrangements</fullName>
            </value>
            <value>
                <fullName>Special circumstances, please specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>