force-app/main/default/objects/Waitlist__c/fields/Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>Validation_Date__c</fullName>
    <label>Validation Date</label>
    <type>Date</type>
</CustomField>