force-app/main/default/objects/Waitlist__c/fields/Viewing__c.field-meta.xml
<CustomField>
    <fullName>Viewing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Viewing</label>
    <type>Checkbox</type>
</CustomField>