force-app/main/default/objects/Waitlist__c/fields/Waitlist_Onboarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Onboarded_Date__c</fullName>
    <label>Waitlist Onboarded Date</label>
    <type>Date</type>
</CustomField>