force-app/main/default/objects/Waitlist__c/fields/WL_On_Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>WL_On_Hold_Date__c</fullName>
    <label>WL On Hold Date</label>
    <type>Date</type>
</CustomField>