force-app/main/default/objects/Waitlist__c/fields/WL_On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>WL_On_Hold_Reason__c</fullName>
    <label>WL On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out of country</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>