force-app/main/default/objects/Waitlist__c/fields/WL_On_hold_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>WL_On_hold_Reason_Other__c</fullName>
    <label>WL On hold Reason Other</label>
    <type>TextArea</type>
</CustomField>