force-app/main/default/objects/Waitlist__c/fields/WL_Onboarded_Date_Reason__c.field-meta.xml
<CustomField>
    <fullName>WL_Onboarded_Date_Reason__c</fullName>
    <label>WL Onboarded Date Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Honouring old date of application</fullName>
            </value>
            <value>
                <fullName>Separated file</fullName>
            </value>
            <value>
                <fullName>Other – there may end up being changes to the legislation that this is a requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>